--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SupportAI - AI-Powered Customer Support for E-Commerce</title>
-    <meta name="description" content="Automate customer support for your Shopify or WooCommerce store. Save time and costs with AI-powered assistance available 24/7." />
+    <meta name="description" content="Automate customer support for your  store. Save time and costs with AI-powered assistance available 24/7." />
     <meta name="author" content="SupportAI" />
     <meta property="og:image" content="/og-image.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
